@@ -1,9 +1,16 @@
-#statusbar-newtabbutton {
-  margin-left: -2px;  /* make it tight with the left side of the window */
-  border-left: 1px solid #868686;
+.statusbar-tabbutton {
   border-right: 1px solid #868686;
+  border-left: 1px solid #868686;
   width: 64px;
   height: 20px;
+  margin: 0;
+}
+.statusbar-tabbutton:hover:active {
+  background-color: -moz-mac-chrome-active;
+}
+
+#statusbar-newtabbutton {
+  margin-left: -2px;  /* make it tight with the left side of the window */
   list-style-image: url(chrome://browser/skin/tabbrowser/newtab.png);
   -moz-image-region: rect(2px, 17px, 18px, 1px);
   padding: 0 0 0 24px; /* make sure the image has space and is centered */
@@ -13,5 +20,18 @@
 }
 #statusbar-newtabbutton:hover:active {
   -moz-image-region: rect(2px, 53px, 18px, 37px);
-  background-color: -moz-mac-chrome-active;
+}
+
+#statusbar-alltabsbutton {
+  margin-left: -1px;  /* make it tight with the "new tab" button */
+  list-style-image: url(chrome://browser/skin/tabbrowser/alltabs-box-bkgnd-icon.png);
+  -moz-image-region: rect(2px, 19px, 18px, 3px);
+  -moz-transform: rotate(180deg);
+  padding: 0 0 0 24px; /* make sure the image has space and is centered */
+}
+#statusbar-alltabsbutton:hover {
+  -moz-image-region: rect(2px, 41px, 18px, 25px);
+}
+#statusbar-alltabsbutton:hover:active {
+  -moz-image-region: rect(2px, 63px, 18px, 47px);
 }
